<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  >

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/service_life_btn_selector"
            android:clickable="true"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="30dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life_service"
                android:textColor="@drawable/service_txt_bg_selector"
                android:textSize="@dimen/txt_size_xl"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/life_service_tip"
                android:textColor="@drawable/service_txt_bg_selector"
                android:textSize="@dimen/txt_size_xs"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@+id/layout1"
            android:background="@drawable/service_call_btn_selector"
            android:clickable="true"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="30dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_service"
                android:textColor="@drawable/service_txt_bg_selector"
                android:textSize="@dimen/txt_size_xl"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/call_service_tip"
                android:textColor="@drawable/service_txt_bg_selector"
                android:textSize="@dimen/txt_size_xs"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout1"
            android:layout_marginTop="60dp"
            android:background="@drawable/service_save_btn_selector"
            android:clickable="true"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="30dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_service"
                android:textColor="@drawable/service_txt_bg_selector"
                android:textSize="@dimen/txt_size_xl"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/car_service_tip"
                android:textColor="@drawable/service_txt_bg_selector"
                android:textSize="@dimen/txt_size_xs"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout2"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="60dp"
            android:layout_toRightOf="@+id/layout3"
            android:background="@drawable/service_car_btn_selector"
            android:clickable="true"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="30dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/takecar_service"
                android:textColor="@drawable/service_txt_bg_selector"
                android:textSize="@dimen/txt_size_xl"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/takecar_service_tip"
                android:textColor="@drawable/service_txt_bg_selector"
                android:textSize="@dimen/txt_size_xs"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>