<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scan_connect_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shoots_bg_02"
    android:orientation="vertical">

    <TextView
        android:id="@+id/scan_wifi_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/thisisanetwork"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/ip_addr"
            android:textColor="@color/darkgrey"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/scan_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/netmask"
            android:textColor="@color/darkgrey"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/scan_netmask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/gateway"
            android:textColor="@color/darkgrey"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/scan_gateway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/delete_cur_connect"
            android:textSize="24sp"
            android:text="@string/neglect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/common_btn_selector"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/scan_back"
            android:textSize="24sp"
            android:text="@string/scan_wifi_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:background="@drawable/common_btn_selector"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>